--- a/ble-test/Base.lproj/Main.storyboard
+++ b/ble-test/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Hxw-fc-2OX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -42,7 +42,15 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Central"/>
                                 <connections>
-                                    <segue destination="aLZ-UZ-dja" kind="showDetail" id="2Dg-qq-scd"/>
+                                    <segue destination="aLZ-UZ-dja" kind="push" id="QVA-W6-6Qx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fI-Qy-dmo">
+                                <rect key="frame" x="16" y="110" width="70" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Peripheral"/>
+                                <connections>
+                                    <segue destination="wkB-8p-Ild" kind="push" id="4os-4U-rgt"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -103,11 +111,36 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Central" id="stV-Cx-xEH"/>
+                    <navigationItem key="navigationItem" title="Central" id="stV-Cx-xEH">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="MTP-BM-aLf"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nlE-vw-X6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1048.8" y="429.53523238380814"/>
+        </scene>
+        <!--Peripheral-->
+        <scene sceneID="mZS-hO-FnZ">
+            <objects>
+                <viewController title="Peripheral" id="wkB-8p-Ild" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vNK-xT-06N"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ezi-4R-fnf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pSC-kp-tLR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Peripheral" id="8nR-Sj-uMd">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="4zO-zG-Kjw"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OhQ-Y1-Rnl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1740" y="430"/>
         </scene>
     </scenes>
 </document>
